<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_apps</name>
  <version>0.1.0</version>
  <description>The application package for CIR-KIT-Unit03</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_apps.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_apps/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
